# coin_candle_crawler

./: .gitignore  LICENSE  README.md  pyproject.toml
coin_candle_crawler/: bithumb_rcv_thd.py  db_thd.py  evt_type.py
run/: config.json.default  rcv_bithumb.py
